--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
-    "@vercel/kv": "^1.0.1",
+    "ioredis": "^5.3.2",
     "next": "^15.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
